Fix in order place and adding order number

--- a/WebUI/ClientApp/src/app/pages/order-managment/all-orders/all-orders.component.html
+++ b/WebUI/ClientApp/src/app/pages/order-managment/all-orders/all-orders.component.html
@@ -23,6 +23,7 @@
                     <table class="table table-dashboard mb-0">
                         <thead>
                             <tr>
+                                <th scope="col" class="border-top-0"> # </th>
                                 <th scope="col" class="border-top-0"> رقم الطلب</th>
                                 <th scope="col" class="border-top-0">حالة الطلب</th>
                                 <th scope="col" class="border-top-0">إسم العميل</th>
@@ -38,6 +39,7 @@
                             <tr *ngFor="let order of orders; let i = index" (click)="openOrderDetails(order)"
                                 rel="off-canvas" class="canvas-btn">
                                 <th scope="row">{{ i + 1 }}</th>
+                                <th scope="row">{{ order.orderNumber }}</th>
                                 <td>
                                     <div [ngSwitch]="order.orderStatus">
                                         <span *ngSwitchCase="0" class="badge badge-pill badge-primary">جديد</span>
@@ -52,7 +54,7 @@
                                     </div>
                                 </td>
                                 <td> {{ order.customerName }} </td>
-                                <td> {{order?.customerId.substr(0, 5)}} </td>
+                                <td> {{order?.customerId}} </td>
                             </tr>
                         </tbody>
                     </table>
