--- a/WebUI/ClientApp/src/app/pages/product-catalog/products/products.component.html
+++ b/WebUI/ClientApp/src/app/pages/product-catalog/products/products.component.html
@@ -17,6 +17,11 @@
           <a class="btn btn-outline-info mr-auto" type="button" (click)="openEditorToAddProduct()">
             اضافة
           </a>
+          <div class="upload-btn-wrapper">
+            <button class="white-custom-btn">رفع ملف ايكسل <i class="far fa-file-excel"></i></button>
+            <input type="file" name="myfile" (change)="importProductsFromExcel($event)" />
+          </div>
+
         </form>
       </div>
 
